# mesastream

./: .env.example  Cargo.toml  Dockerfile  README.md  openapi.yaml
.github/workflows/: build.yaml
src/: api.rs  auth.rs  cache.rs  config.rs  dave.rs  discord.rs  discord_transport.rs  errors.rs  main.rs  models.rs  player.rs  telemetry.rs  voice.rs  voice_gateway.rs  ws.rs
src/audio/: cache.rs  codec.rs  effects.rs  encoder.rs  mod.rs  reader.rs
src/source/: mod.rs
src/source/soundcloud/: mod.rs  model.rs  rest.rs
src/source/youtube/: mod.rs  ytdlp.rs
