[package]
name = "mesastream"
version = "0.1.0"
edition = "2021"

[dependencies]
console-subscriber = { version = "0.5", optional = true }
actix-web = { version = "4" }
actix-web-httpauth = { version = "0.8" }
actix-ws = { version = "0.4" }
aes-gcm = { version = "0.10" }
async-trait = { version = "0.1" }
arc-swap = { version = "1.9" }
bytes = { version = "1" }
chacha20poly1305 = { version = "0.10" }
crossbeam-channel = { version = "0.5" }
davey = { version = "0.1" }
dotenvy = { version = "0.15" }
futures-util = { version = "0.3" }
hex = { version = "0.4" }
opentelemetry = { version = "0.27" }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opus = { version = "0.3" }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "ogg", "vorbis", "flac", "wav", "pcm", "mkv"] }
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = { version = "0.1" }
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_27"] }
tracing-opentelemetry = { version = "0.28" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2" }
uuid = { version = "1", features = ["v4", "serde"] }

#bm-lib = { path = "../lib" }
bm-lib = { git = "https://github.com/blackmesadev/lib.git" }

[profile.release]
lto = "thin"
codegen-units = 1
